--- a/src/app/assets/stylesheets/custom.scss
+++ b/src/app/assets/stylesheets/custom.scss
@@ -174,6 +174,17 @@ footer {
   }
 }
 
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
 /* miscellaneous */
 .debug_dump {
   clear: both;
